src/css/components.css
/* mobile first design */


/*****Homepage Filter*****/

.spacing{
  position: sticky;
  top: 70px;
  padding: 5px 15px 5px 15px;
}

.padding{
  padding: 5px 5px;
}

.flex-container{
  display: flex;
}

.formatting{
  display: flex;
  flex-direction: column;
  max-width: 100vw;
}
/*****User Cards*****/

div.card-img-overlay{
  padding: 0px !important;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.icons{
  width: 50px;
  height: 50px;
}

.icon-friend{
  height: 1.5rem;
  width: 1.5rem;
  
}

.rounded-circle{
  background: #46474C;
  border-color: white;
}

.information{
  background: linear-gradient(0deg, rgba(83, 84, 90, 0.75) 0%, rgba(83, 84, 90,.75) 68%, rgba(83, 84, 90,0) 100%);
  padding-top: 20px;
}

.information.coach{
  background: linear-gradient(0deg, rgba(163, 75, 112, 0.75) 0%, rgba(163, 75, 112, 0.75) 68%, rgba(163, 75, 112, 0) 100%);
}

.information.learner{
  background: linear-gradient(0deg, rgba(48,115,115,0.75) 0%, rgba(48,115,115,0.75) 68%, rgba(48,115,115,0) 100%);
}

.information.teammate{
  background: linear-gradient(0deg, rgba(83, 84, 90, 0.75) 0%, rgba(83, 84, 90,.75) 68%, rgba(83, 84, 90,0) 100%);
}

/*****User Cards Modal*****/
.usercardmodal {
  background-color: rgba(0, 0, 0, 0.5);
}

.modalcontent {
  width: 20rem;
  background-color: #46474D;
  overflow: hidden;
}

.extracontent {
  padding: 2rem;
}

.extracontent ul {
  list-style: none;
}

.strength li:before {
  content: "+";
  margin-right: 4px;
}

.weakness li:before {
  content: "-";
  margin-right: 4px;
}

.modalwrap {
  background: linear-gradient(90deg, rgba(163, 75, 112, 1), rgba(38, 193, 186, 1));
  padding: 3px;
}

@media (min-width: 576px){

/*****Homepage Filter*****/
  .spacing{
    position: sticky;
    top: 70px;
    padding: 5px 0px 5px 50px;
  }

  .formatting{
    display: flex;
    flex-direction: row;
  }

/*****User Cards*****/


  
}

@media (min-width: 992px){ /*desktops */

}

@media (min-width: 1200px) { /*large desktops */

}

